--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
     background-size: cover;
     background-position: center;
   }
+  
   .options{
     position: absolute;
     top: 20px;
@@ -255,13 +256,13 @@ body {
     justify-content: center;
   }
   
-  ul {
+  .ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
   }
   
-  button {
+  .button {
     padding: 10px 20px;
     background-color:peru;
     color: #fff;
@@ -279,25 +280,17 @@ body {
     display: block;
     border: #ccc;
   }
-.content{
-  position:absolute;
-    top:203%;
-    left:20%;
-    transform: translate(-50%, -50%);
-    color:black;
-    font-style:oblique;
-    font-size:3vmin;
-    text-align:end;
-    margin-bottom:auto;
+
     
-}
+
 div.gallery {
   margin-bottom:5px;
   border: 1px solid #ccc;
   float: left;
-  width: 180px;
+  width: 220px;
   height:250px;
   padding:5px 10px ;
+  margin-top: 40px;
 }
 
 div.gallery:hover {
@@ -309,10 +302,41 @@ div.gallery img {
   height:auto;
 }
 .desc{
-  display: inline-block;
+  display:contents;
 }
-
+.text2{
+  position: relative;
+  left:20px;
+  top:50px;
+  font-size:40px;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: darkred;
+  margin-top: 50px;
  
+}
+.back{
+  top:100px;
+  margin-top: 100px;
+  padding: 0 20px;
+  background-color:black;
+  color: #fff;
+  overflow:scroll;
+
+
+
+}
+.cities{
+  display: flex;
+  justify-content:space-between;
+  align-items:flex-start;
+  bottom: 100px;
   
-
-
+}
+.column1{
+  min-width: auto;
+  justify-content:space-between;
+}
+.city1{
+  color:inherit;
+  font-size: 20px;
+}
