--- a/style.css
+++ b/style.css
@@ -310,8 +310,9 @@ div.gallery img {
   top:50px;
   font-size:40px;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  color: darkred;
+  color:white;
   margin-top: 50px;
+  text-decoration:none;
  
 }
 .back{
