--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ sbody {
     text-decoration: none;
     text-transform: uppercase;
     border-radius: 10px;
-    font-weight:bold;
+    font-weight:bolder;
     background: transparent;
     border: 1px solid peru ;
     position: relative;
