--- a/style.css
+++ b/style.css
@@ -310,7 +310,7 @@ div.gallery img {
   top:50px;
   font-size:40px;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  color:white;
+  color:darkred;
   margin-top: 50px;
   text-decoration:none;
  
