--- a/style.css
+++ b/style.css
@@ -307,7 +307,7 @@ div.gallery img {
 .text2{
   position: relative;
   left:50px;
-  bottom:100px;
+  top:20px;
   font-size:40px;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color:darkred;
