--- a/style.css
+++ b/style.css
@@ -354,3 +354,18 @@ div.gallery img {
   text-decoration: none;
 
 }
+.sidebar{
+    position:fixed;
+    left:0;
+    width:250px;
+    height:100%;
+    background:#042331;
+}
+.sidebar header{
+    font-size:22px;
+    color:white;
+    text-align:center;
+    line-height:70px;
+    background:#063146;
+    user-select:none;
+}
