--- a/style.css
+++ b/style.css
@@ -369,3 +369,14 @@ div.gallery img {
     background:#063146;
     user-select:none;
 }
+.sidebar ul a{
+    display:block;
+    height:100%;
+    width:100%;
+    line-height:65px;
+    font-size:20px;
+    color:black;
+    padding-left:40px;
+    box-sizing:border-box;
+    border-top:1px solid rgba(225,225,255,.1);
+}
