--- a/style.css
+++ b/style.css
@@ -356,7 +356,7 @@ div.gallery img {
 }
 .sidebar{
     position:fixed;
-    left:0;
+    left:-250px;
     width:250px;
     height:100%;
     background:#042331;
@@ -388,6 +388,20 @@ ul li:hover a{
 }
 .sidebar ul a i{
     margin-right:16px;
+}
+#check{
+    display:none;
+}
+label #btn,label #cancel{
+    position:absolute;
+    cursor:pointer;
+    
+}
+label #btn{
+    left:40px;
+    top:25px;
+    font-size: 35px;
+    color: red;
 }
 
     
