--- a/style.css
+++ b/style.css
@@ -360,6 +360,7 @@ div.gallery img {
     width:250px;
     height:100%;
     background:#042331;
+    margin-top:200px;
 }
 .sidebar header{
     font-size:22px;
