--- a/style.css
+++ b/style.css
@@ -359,7 +359,7 @@ div.gallery img {
     left:0px;
     width:250px;
     height:100%;
-    background:#042331;
+    background:black;
     margin-top:200px;
 }
 .sidebar header{
@@ -367,6 +367,6 @@ div.gallery img {
     color:white;
     text-align:center;
     line-height:70px;
-    background:#063146;
+    background:blue;
     user-select:none;
 }
