--- a/style.css
+++ b/style.css
@@ -359,12 +359,12 @@ div.gallery img {
     left:0px;
     width:250px;
     height:100%;
-    background:black;
+    background:red;
     margin-top:200px;
 }
 .sidebar header{
     font-size:22px;
-    color:white;
+    color:black;
     text-align:center;
     line-height:70px;
     background:blue;
